--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
   <string name="login_login">로그인</string>
 
   <string name="info_age">출생 년도를 선택하세요</string>
+  <string name="title_activity_company">CompanyActivity</string>
 </resources>
