--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
   <string name="login_login">로그인</string>
 
   <string name="info_age">출생 년도를 선택하세요</string>
+  <string name="ask_type">문의 유형을 선택하세요</string>
   <string name="title_activity_company">CompanyActivity</string>
 
   <string name="confirm_service"><u>서비스 이용 약관</u></string>
