--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,269 @@
   <string name="ask_type">문의 유형을 선택하세요</string>
   <string name="title_activity_company">CompanyActivity</string>
 
-  <string name="confirm_service"><u>서비스 이용 약관</u></string>
+  <string name="confirm_service"><u>서비스 이용약관</u></string>
   <string name="confirm_personal"><u>개인정보 취급 방침</u></string>
-  <string name="confirm_gps"><u>위치기반 서비스 이용약관</u></string>
+
+  <string name="string_use">제1조 (목적)\n
+    이 약관은 주식회사 푸지(이하 “회사”)가 제공하는 서비스 이용과 관련하여 회사와 회원 간의 권리, 의무 및 책임사항과 절차 등을 정하기 위해 만들어졌습니다.\n
+    \n
+    제2조 (정의)\n
+    이 약관에서 사용하는 용어는 다음과 같습니다.\n
+    • "서비스"란 회원의 단말기(모바일, 태블릿PC 등 각종 유무선 장치를 포함)를 통하여 회사가 제공하는 푸지 및 관련 서비스 일체를 말합니다.\n
+    • "회원"이란 서비스에 접속하여 이 약관에 따라 회사와 이용계약을 체결함으로써 서비스를 이용하는 고객 을 말합니다.\n
+    • "아이디"란 회원의 식별과 서비스 제공을 위하여 회원이 정하고 회사가 승인한 문자와 숫자의 조합을 의미합니다\n
+    • "게시물”이라 함은 “회원”이 “서비스”를 이용함에 있어 “서비스상”에 게시한 부호,문자,음성,음향,화상,동영상 등의 정보 형태의 글, 사진, 동영상 및 각종 파일과 링크 등을 의미합니다.\n
+    • "포인트"란 회사가 정한 규정에 따라 회원이 일정한 행위를 마친 때에 시스템에 적립되는 서비스 상의 데이터를 말합니다.\n
+    • "제휴콘텐츠"란 회사가 외부 업체와의 제휴를 통하여 회원에게 제공하는 유 무상의 콘텐츠를 말합니다.\n
+    \n
+    제3조 (약관의 게시와 개정)\n
+    ①이 약관은 회원이 쉽게 알 수 있도록 앱 공지사항 및 https://www.puzi.kr (이하 "웹사이트")의 하단링크를 통하여 게시합니다.\n
+    ②회사는 필요에 따라 "약관의규제에관한법률", "정보통신망이용촉진및정보보호등에관한법률" 등 관련 법령을 위반하지 않는 범위 내에서 이 약관을 개정할 수 있습니다.\n
+    ③회사가 약관을 개정하는 경우 적용일자 및 개정사항을 명시하여 적용일 14일 전에 웹사이트 기타 공지사항 게시판 또는 이메일을 통해 공지합니다.\n
+    ④공지일로부터 14일 이내에 회원이 명시적으로 거부하지 않는 경우 개정 약관에 동의한 것으로 봅니다.\n
+    \n
+    제4조 (약관의 해석)\n
+    ①이 약관에서 정하지 않은 사항이나 해석에 대하여는 관련법령 또는 상관례에 따릅니다.\n
+    ②회사는 푸지 내부의 개별 서비스에 대해 별도의 이용약관 또는 정책(이하 "별도약관")을 둘 수 있으며, 그 내용이 이 약관과 충돌하는 경우 별도의 약관이 우선하여 적용됩니다.\n
+    \n
+    제5조 (이용계약의 체결)\n
+    ①서비스 이용계약은 회원이 되고자 하는 사람(이하 "가입신청자")이 약관에 동의하고 가입을 신청한 다음 회사가 이를 수락함으로써 체결됩니다. 필요한 경우 회사는 본인확인기관을 통한 실명확인 및 본인인증을 요청할 수 있습니다.\n
+    ②가입신청자는 가입신청 시 진실한 정보를 기재하여야 하며, 허위의 정보를 기재함으로 인한 불이익 및 법적 책임은 가입신청자에게 있습니다.\n
+    ③만 14세 미만은 회원이 될 수 없습니다.\n
+    ④가입신청자가 이전에 회원자격을 상실한 적이 있는 경우, 허위의 명의 또는 타인의 명의를 이용한 경우, 기타 승낙이 불가능한 사유가 있는 경우 승낙이 거부될 수 있습니다.\n
+    ⑤회사는 서비스 관련설비의 여유 기타 기술상 또는 업무상의 이유로 승낙을 유보할 수 있으며, 그 결과를 가입신청자에게 알려 드립니다.\n
+    ⑥회사는 회원에 대해 회사정책에 따라 등급별로 구분하여 이용시간, 이용횟수, 서비스 메뉴 등을 세분하여 이용에 차등을 둘 수 있습니다.\n
+    ⑦회사는 회원에 대해 “영화 및 비디오물의 진흥에 관한 법률” 및 “청소년보호법”등에 따른 등급 및 연령 준수를 위해 이용제한이나 등급별 제한을 할 수 있습니다.\n
+    \n
+    제6조 (회원정보의 변경)\n
+    ①회원은 서비스 내 마이페이지 화면을 통하여 본인의 개인정보를 열람하고 수정할 수 있습니다. 단, 서비스 관리를 위하여 ID, 성별, 출생연도는 수정할 수 없습니다.\n
+    ②가입신청 시에 기재한 회원정보에 변동이 생긴 경우 이를 수정하거나 회사에 통지하여야 하며 미수정 또는 통지하지 않음으로 인한 불이익에 대하여 회사는 책임지지 않습니다.\n
+    \n
+    제7조 (서비스 내용)\n
+    회사가 본 약관에 정해진 바에 따라 회원에게 제공하는 서비스는 다음 각 호와 같으며 서비스를 이용하고자 하는 고객은 본 약관에 정해진 제반 절차를 거쳐 회원으로 가입하여야 합니다. 단, 본 서비스는 타겟팅 광고 서비스로써 그 특성상 광고주의 요구에 따라 회원들은 일부 서비스의 이용조건, 이용범위 등이 제한되거나 회원에게 일정한 자격요건이 요구될 수 있으며, 이 경우 회사는 그 제한사항 및 자격요건을 회원께 고지해 드립니다.\n
+    •적립 서비스\n
+    회원은 본 약관에 정해진 바에 따라 모바일을 통해 광고를 시청하고 제공되는 절차를 이행할 경우 포인트를 적립 받을 수 있습니다.\n
+    •현금 환급 서비스\n
+    회원은 본 약관에 정해진 바에 따라 기적립된 포인트를 현금으로 환급할 수 있습니다.\n
+    •제휴 콘텐츠 서비스\n
+    회원은 본 약관에 정해진 바에 따라 기적립된 포인트로 제휴 된 상품을 구매할 수 있습니다.\n
+    •이벤트 서비스\n
+    회원은 본 약관에 정해진 바에 따라 각종 이벤트에 참여할 수 있습니다.\n
+    •기타\n
+    회사는 상기 각 호의 서비스 이외에도 추가적인 서비스를 개발하여 회원에게 제공할 수 있습니다. 회사는 서비스의 원활한 제공을 위하여 서비스 웹 페이지를 운영하고 있으며, 서비스에서 지원되지 못하는 보다 상세한 내용을 확인 및 문의할 수 있습니다.\n
+    \n
+    제8조 (서비스의 변경 및 중단)\n
+    ① 회사는 서비스의 내용, 품질, 또는 기술적 사양 등에 대해 회사의 합리적 판단에 따라 변경할 수 있습니다.\n
+    ② 회사는 아래 각 호에 해당하는 사유가 발생한 경우에는 본 서비스의 전부 또는 일부를 제한하거나 중단할 수 있습니다.\n
+    • 광고주가 회사 광고서비스의 운영을 고의•과실로 방해하는 경우\n
+    • 광고서비스용 설비 점검, 보수 또는 공사로 인하여 부득이한 경우\n
+    • 전기통신사업법에 규정된 기간통신사업자가 전기통신 서비스를 중지했을 경우\n
+    • 국가비상사태, 서비스 설비의 장애 또는 서비스 이용의 폭주 등 광고서비스 이용에 지장이 있는 경우\n
+    • 기타 중대한 사유로 인하여 회사가 광고서비스 제공을 지속하는 것이 부적당하다고 인정하는 경우\n
+    ③ 회사는 제 1항 및 제 2항의 각호 규정에 의하여 광고 서비스를 변경하거나 서비스 이용을 제한 및 중지할 때에는 그 사유 및 제한기간 등을 회원에게 이메일로 발송하거나 서비스 내 공지사항 및 웹 페이지에 게시하는 방법으로 알립니다.\n
+    \n
+    제9조 (이용계약의 해지, 자격상실 및 정지)\n
+    ① 회원은 본인 희망 시 계약을 해지하거나 서비스의 이용중지를 요청할 수 있습니다.\n
+    ② 회원이 서비스 이용중지를 요청할 경우, 이메일 통보 등 회사가 지정한 절차를 거쳐 신청해야 합니다.\n
+    ③ 회사는 다음 각 호에 해당하는 회원이 확인될 경우, 당해 회원에 대한 사전 통보 없이 회원자격 유보/중지/해지 등의 조치를 취할 수 있으며, 이 경우 회원은 서비스와 관련된 모든 권리를 주장할 수 없고, 이후 회원 재가입이 금지됩니다.\n
+    • 회원가입 신청 시에 허위의 내용을 등록한 경우\n
+    • 포인트 부정적립 및 부정사용 등 서비스를 부정한 방법 또는 목적으로 이용한 경우\n
+    부정적립이란 회원이 실제로 광고를 시청하지 않았음에도 불구하고 회원에게 적립된 경우 또는 시청한 광고 이상으로 포인트가 지급된 경우, 또는 부정한 방법으로 추천인을 모집하여 포인트가 지급된 경우를 말합니다. 회원은 포인트를 지급받기 위해 정상적인 방법으로 광고를 시청하여야 하며 회사가 제공하는 절차를 이행해야 합니다. 그 이외의 경우에는 부정적립으로 간주합니다.\n
+    • 회사가 서비스 내 공지사항을 통하여 공시하는 저작권 규정을 위반하는 경우\n
+    • 회원이 사망한 경우\n
+    • 다른 회원의 서비스 홈페이지 이용을 방해하거나 그 정보를 도용하는 등 전자거래질서를 위협하는 경우\n
+    • 서비스 내 다른 회원 및 회사의 임직원에 대한 위협/희롱/지속적인 고통 및 불편을 끼치는 경우\n
+    • 서비스 내에서 회사의 운영자/임직원 또는 회사를 사칭한 경우\n
+    • 회원 가입 신청 시 제3자의 개인정보를 이용 및 불법으로 도용한 경우\n
+    • 서비스 이용 중 법률 위반행위 및 사회의 안녕/질서/미풍양속을 해치는 행위를 한 경우\n
+    • 제3자의 특허권, 상표권, 저작권, 영업비밀 등 지적재산권을 포함한 기타 권리를 침해하는 행위를 한 경우\n
+    • 회사로부터 특별한 권한을 부여받지 않고 회사의 홈페이지 나 클라이언트 프로그램을 변경 또는 회사의 서버를 해킹하는 등의 시스템을 위협하는 행위를 한 경우\n
+    • 회사의 사전승인 및 다른 회원에 대한 사전 동의 없이 Active X, 스파이웨어, 애드웨어 등의 프로그램을 강제로 설치하게 한 경우\n
+    • 서비스 방문자나 타 회원의 의사와 무관하게 특정 사이트로 방문을 유도한 경우\n
+    • 서비스 이용 중 불법복제 소프트웨어, 제3자의 저작물을 밀매하는 등의 관련 법률에 저촉되는 행위를 한 경우\n
+    • 인종/성/광신/이적 등의 반사회적/도덕적 편견에 기반한 단체를 결성하는 행위를 한 경우\n
+    • 다른 회원의 ID/이메일 계정 등의 개인정보를 수집하는 행위\n
+    • 범죄와의 결부, 관련 법령 위반 활동으로 판단되는 행위를 한 경우\n
+    • 다른 회원으로 하여금 상기 6호 내지 17호의 금지행위를 하도록 유발 및 조장하는 활동을 한 경우\n
+    • 본 약관에 규정된 회원의 의무를 위반한 경우\n
+    • 기타 당사가 공지한 서비스 운영 정책을 위반한 경우\n
+    \n
+    제10조 (포인트적립)\n
+    ① 회사에서 제공하는 광고를 단말기를 통해 회원 본인 또는 서포터가 광고를 확인하고 광고에서 요구하는 액션을 수행하면 포인트를 부여받게 됩니다. 포인트 지급을 위하여 특정 회원의 자격요건이 요구될 수 있습니다.\n
+    ② 회사 내규상에 적립 금액으로 명시된 금액만큼의 포인트가 쌓이며 서비스의 “포인트관리” 화면에서 확인할 수 있습니다.\n
+    ③ 서버에 규정된 적립 금액과 클라이언트 앱 서비스 상 명시된 적립 금액과 차이가 나는 경우 서버에 규정된 적립 금액이 우선 적용되며, 서버와 클라이언트 앱과의 비동기화로 인한 포인트 차이는 보상하지 않습니다.\n
+    ④ 포인트 적립과 관련하여 발생하는 제세공과금은 회원이 부담하는 것을 원칙으로 합니다.\n
+    \n
+    제11조 (포인트의 현금 환급 및 제휴 컨텐츠 이용)\n
+    ① 가용 포인트를 사천 포인트(4,000포인트) 이상 보유한 회원은 회사가 정한 소정절차에 따라 서비스 내 "환급 신청" 화면에서 누적된 가용 포인트를 현금으로 지급 받을 수 있으며, 이 경우 회사는 회원이 지정하는 은행계좌에 상기 금액을 입금함으로써 적법하게 지급한 것으로 봅니다.\n
+    ② 포인트의 사용 및 현금 환급과 관련하여 포인트 일 포인트(1포인트)는 현금 일 원(￦1)으로 환산함을 원칙으로 합니다.\n
+    ③ 포인트의 현금 환급에 따라 발생하는 제세공과금은 회원이 부담합니다.\n
+    ④ 회원의 현금 환급에 대한 입력 정보가 유효하지 않아 환급받지 못하는 경우 귀책사유는 회원에게 있으며 회사는 이를 보상하지 않습니다.\n
+    ⑤ 회사가 제휴한 콘텐츠를 가용포인트를 지급하여 구매 시 해당 바코드가 전송됨으로써 적법하게 지급한 것으로 봅니다.\n
+    ⑥ 회원은 포인트를 타인에게 양도하거나 대여 또는 담보의 목적으로 이용할 수 없습니다. 다만, 회사가 인정하는 적법한 절차를 따른 경우는 예외로 합니다.\n
+    \n
+    제12조 (포인트 정정, 취소 및 소멸)\n
+    ① 포인트 적립에 오류가 있을 경우 회원은 오류발생 시점부터 90일 이내에 회사에 정정 신청을 하여야 하며, 회사는 회원의 정정 신청일로부터 90일 이내에 조정할 수 있습니다.\n
+    ② 회사는 광고주가 회원에게 부여한 포인트를 관리하고 운영하는 역할을 담당합니다. 따라서 광고주와 회사간의 거래 과정에서 결제 문제 발생 또는 광고주의 파산, 부도 등 지급이 불가능한 경우에는 회원에게 기 부여된 포인트가 취소될 수 있으며, 이에 대한 책임은 광고주에게 있습니다.\n
+    ③ 본 조 제2항에 따라 이미 적립된 포인트를 취소한 경우 회사는 회원에 대한 서비스 차원에서 취소된 포인트의 10% 또는 그 이하에 해당하는 포인트를 보상 포인트로 해당 회원에게 제공할 수 있습니다.\n
+    ⑤ 포인트의 적립 또는 사용이 없는 비활성화 상태가 3개월 이상 계속된 회원의 포인트는 소멸됩니다.\n
+    \n
+    제13조 (회원 ID 및 비밀번호)\n
+    ① 회원ID와 비밀번호에 관한 관리책임은 회원 본인에게 있으며, 회원은 제3자에게 자신의 ID 및 비밀번호를 알려주거나 이용하게 해서는 안 됩니다.\n
+    ② 회원이 자신의 ID 또는 비밀번호를 도난당하거나 제3자가 사용하고 있음을 인지한 경우에는 즉시 회사에 통보하고 회사의 안내가 있는 경우에는 그에 따라야 합니다.\n
+    \n
+    제14조 (광고ID와 기기고유번호의 수집 및 연동)\n
+    회사는 서비스 제공을 위하여 서비스 이용과정에서 광고ID(ADID 또는 IDFA), 기기고유번호(IMEI 또는 UDID) 등 비개인정보로 정의된 익명의 데이터를 자동으로 수집하고 회원의 광고ID와 기기고유번호를 연동합니다.\n
+    \n
+    제15조 (회사의 의무)\n
+    ① 회사는 관련법과 본 약관이 금지하거나 미풍양속에 반하는 행위를 하지 않으며, 계속적이고 안정적으로 서비스를 제공하기 위하여 최선을 다하여 노력합니다.\n
+    ② 회사는 회원이 안전하게 서비스를 이용할 수 있도록 개인정보(신용정보 포함)보호를 위해 보안시스템을 갖추어야 하며 개인정보처리방침을 공시하고 준수합니다.\n
+    ③ 회사는 서비스이용과 관련하여 회원으로부터 제기된 의견이나 불만이 정당하다고 인정할 경우에는 이를 처리하여야 합니다. 회원이 제기한 의견이나 불만사항에 대해서는 게시판을 활용하거나 E-mail 등을 통하여 회원에게 처리과정 및 결과를 전달합니다.\n
+    ④ 회사는 회원 관리 및 양질의 서비스를 제공하기 위하여 웹 페이지를 운영합니다.\n
+    \n
+    제16조 (회원의 의무)\n
+    • 회원은 서비스 이용과 관련하여 다음 각 호의 행위를 하여서는 안 됩니다.\n
+    • 동일한 단말기에서 여러 개의 이메일, 개인정보를 입력하여 2개 이상의 계정을 생성, 이용하는 행위\n
+    • 동일한 사용자가 복수의 계정을 생성한 후 상호 가입자 추천을 하는 행위\n
+    • 타인의 이메일 또는 존재하지 않는 이메일 등을 이용하여 계정을 생성하는 행위\n
+    • 서비스 이용 관련 제반 신청행위 또는 변경행위 시 허위내용 등록행위\n
+    • 서비스 내 게시된 각종 정보의 무단 변경, 삭제 등 훼손 행위\n
+    • 다른 회원의 명예를 훼손하거나 개인정보를 수집하는 행위\n
+    • 회사의 동의 없이 영리 목적의 광고 정보를 전송하거나 회사가 허용한 정보 이외의 다른 정보(컴퓨터 프로그램 및 광고 등)를 송신하거나 게시하는 행위\n
+    • 일체의 가공행위를 통해 서비스를 분해, 모방 또는 변형하는 행위\n
+    • 회사, 기타 제3자의 저작권 등 지적재산권에 대한 침해 행위\n
+    • 외설 또는 폭력적인 정보(메시지, 화상, 음성 등), 기타 공서양속에 반하는 정보를 서비스에 공개하거나 게시하는 행위\n
+    \n
+    제17조 (게시물의 저작권)\n
+    ①"회원"이 "서비스" 내에 게시한 "게시물"의 저작권은 해당 게시물의 저작자에게 귀속됩니다.\n
+    ②"회사"는 "회원"의 "게시물"을 이용하고자 하는 경우에는 전화, 팩스, 전자우편 등을 통해 사전에 "회원"의 동의를 얻어야 합니다.\n
+    \n
+    제18조 (게시물의 관리)\n
+    ①"회원"의 "게시물"이 "정보통신망법" 및 "저작권법"등 관련법에 위반되는 내용을 포함하는 경우, 권리자는 관련법이 정한 절차에 따라 해당 "게시물"의 게시중단 및 삭제 등을 요청할 수 있으며, "회사"는 관련법에 따라 조치를 취하여야 합니다.\n
+    ②"회사"는 전항에 따른 권리자의 요청이 없는 경우라도 권리침해가 인정될 만한 사유가 있거나 기타 회사 정책 및 관련법에 위반되는 경우에는 관련법에 따라 해당 "게시물"에 대해 임시조치 등을 취할 수 있습니다.\n
+    ③본 조에 따른 세부절차는 "정보통신망법" 및 "저작권법"이 규정한 범위 내에서 "회사"가 정한 절차에 따릅니다. \n
+    \n
+    제19조 (권리의 귀속)\n
+    ①"서비스"에 대한 저작권 및 지적재산권은 "회사"에 귀속됩니다. 단, "회원"의 "게시물" 및 제휴계약에 따라 제공된 저작물 등은 제외합니다.\n
+    ②"회사"가 제공하는 서비스의 디자인, "회사"가 만든 텍스트, 스크립트(script), 그래픽, "회원" 상호 간 전송 기능 등 "회사"가 제공하는 서비스에 관련된 모든 상표, 서비스 마크, 로고 등에 관한 저작권 기타 지적재산권은 대한민국 및 외국의 법령에 기하여 "회사"가 보유하고 있거나 "회사"에게 소유권 또는 사용권이 있습니다.\n
+    ③"회원"은 본 이용약관으로 인하여 "서비스"를 소유하거나 "서비스"에 관한 저작권을 보유하게 되는 것이 아니라, "회사"로부터 "서비스"의 이용을 허락받게 되는바, "서비스"는 정보취득 또는 개인용도로만 제공되는 형태로 "회원"이 이용할 수 있습니다.\n
+    ④"회원"은 명시적으로 허락된 내용을 제외하고는 "서비스"를 통해 얻어지는 "회원" 상태정보를 영리 목적으로 사용, 복사, 유통하는 것을 포함하여 "회사"가 만든 텍스트, 스크립트, 그래픽의 "회원" 상호 간 전송기능 등을 복사하거나 유통할 수 없습니다.\n
+    ⑤"회사"는 서비스와 관련하여 "회원"에게 "회사"가 정한 이용조건에 따라 계정, "아이디", 콘텐츠 등을 이용할 수 있는 이용권만을 부여하며, "회원"은 이를 양도, 판매, 담보제공 등의 처분행위를 할 수 없습니다.\n
+    \n
+    제20조 (서비스관련 분쟁해결)\n
+    ①회사는 서비스 이용과 관련하여 회원으로부터 제출되는 불만사항 및 의견을 최대한 신속하게 처리합니다. 다만, 신속한 처리가 곤란한 경우에는 회원께 그 사유와 처리일정을 조속히 통보해 드립니다.\n
+    ②회사와 회원 간에 발생한 분쟁은 전자거래기본법에 따라 설치된 전자거래분쟁 조정위원회의 조정을 거칩니다.\n
+    \n
+    제21조 (서비스 종료)\n
+    ① 서비스를 종료하고자 할 경우, 회사는 서비스를 종료하고자 하는 날로부터 3개월 이전에 본 약관 제3조 제3항에 규정된 통지방법을 준용하여 회원에게 알려 드립니다.\n
+    ② 본 조 제1항에 따른 서비스 종료 통지가 있는 날(이하 "통지일") 현재 기 적립된 포인트는 회사가 별도 지정하는 날("서비스 종료일")까지 본 약관이 정하는 바에 따라 현금 환급을 받거나 제휴 콘텐츠를 이용해 소진하여야 합니다. 서비스 종료일까지 사용하지 않은 포인트는 자동으로 소멸됩니다.\n
+    ③ 본 조 제1항에 따른 서비스 종료 통지일 이후 회원은 회사로부터 서비스를 제공받지 못합니다.\n
+    \n
+    제22조 (준거법 및 합의관할)\n
+    ① 본 약관에서 정하지 않은 사항과 본 약관의 해석에 관하여는 대한민국 법 및 상관례에 따릅니다.\n
+    ② 서비스 및 본 약관과 관련한 제반 분쟁 및 소송은 서울중앙지방법원 또는 민사소송법상의 관할법원을 제1심 관할법원으로 합니다.\n
+    \n
+    제23조 (개인정보보호의무)\n
+    회사는 관련법령이 정하는 바에 따라서 회원 등록정보를 포함한 회원의 개인정보를 보호하기 위하여 노력합니다. 회원의 개인정보보호에 관해서는 관련법령 및 회사가 정하는 개인정보취급방침에서 정한 바에 의하며, 회원이 상시 확인할 수 있도록 홈페이지를 통해 공지하고 있습니다.\n
+    \n
+    부칙\n
+    이 약관은 2018년 1월 27일부터 적용됩니다.</string>
+
+  <string name="string_personal">주식회사 푸지(이하 \'푸지\')는 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.\n
+    푸지는 개인정보처리방침을 개정하는 경우 앱 또는 웹의 공지사항을 통하여 공지할 것입니다.\n
+    본 방침은 2018년 1월 27일부터 시행됩니다.\n
+    \n
+    1. 개인정보의 처리 목적 \n
+    푸지는 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적 이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.\n
+    ①이용자 식별, 회원 가입, 본인 확인, 연령 확인 및 법정대리인 동의 진행, 불량회원 처리\n
+    ②서비스 제공에 관한 계약 이행, 맞춤형 서비스 제공, 상품 배송, 상품대금이나 이용요금 정산\n
+    ③신규 서비스의 개발, 이용기록 분석, 서비스 개선\n
+    ④상담, 불만 처리, 부정이용 처리, 공지사항 전달\n
+    ⑤이벤트 행사 시 정보 전달, 마케팅 및 광고\n
+    \n
+    2. 개인정보 수집 항목\n
+    ① 수집하는 개인정보의 항목\n
+    첫째, 푸지는 회원가입, 원활한 고객상담, 각종 서비스의 제공을 위해 최초 회원가입 당시 아래와 같은 개인정보를 수집하고 있습니다.\n
+    IP 주소, 이메일, 성별, 출생연도, 거주지역, 결혼유무, 관심사\n
+    둘째, 서비스 이용과정에서 아래와 같은 정보들이 생성되어 수집될 수 있습니다.\n
+    기기ID, 은행 계좌 정보, 이용자 적립금, 아이디, 쿠키, 방문 일시, 서비스 이용 기록, 불량 이용 기록\n
+    ② 개인정보 수집방법\n
+    푸지는 다음과 같은 방법으로 개인정보를 수집합니다.\n
+    - 푸지 프로그램을 실행 또는 사용함으로써 자동으로 수집 \n
+    - 서비스 가입이나 사용 중 이용자의 자발적 제공을 통한 수집\n
+    \n
+    3. 개인정보의 처리 및 보유 기간\n
+    푸지는 서비스에 가입한 회원의 정보를 회원 탈퇴 후 5일 이내, 기타 이용자의 정보를 개인정보의 수집 및 이용목적 달성 시 지체 없이 파기합니다.\n
+    단, 불량 이용자 제재나 관련 분쟁 처리 등 서비스 관리를 위한 목적으로 1년 동안, 법령에 따라 보존해야만 하는 경우 아래와 같이 일정 기간 동안 이용자정보를 보존합니다.\n
+    「전자상거래 등에서의 소비자보호에 관한 법률」 \n
+    계약 또는 청약철회 등에 관한 기록 : 5년\n
+    대금결제 및 재화 등의 공급에 관한 기록 : 5년\n
+    소비자의 불만 또는 분쟁처리에 관한 기록 : 3년\n
+    표시•광고에 관한 기록 : 6개월\n
+    「전자금융거래법」 – 전자금융에 관한 기록 : 5년\n
+    「통신비밀보호법」 – 로그인 기록(로그기록자료, 접속지의 추적자료) : 3개월\n
+    「위치정보의 보호 및 이용 등에 관한 법률」 – 개인위치정보에 관한 기록 : 6개월\n
+    \n
+    4. 정보주체와 법정대리인의 권리•의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.\n
+    ① 정보주체는 푸지에 대해 언제든지 개인정보 열람,정정,삭제,처리정지 요구 등의 권리를 행사할 수 있습니다.\n
+    ② 제1항에 따른 권리 행사는 푸지에 대해 개인정보 보호법 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 푸지는 이에 대해 지체 없이 조치하겠습니다.\n
+    ③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.\n
+    ④ 개인정보 열람 및 처리정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.\n
+    ⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.\n
+    ⑥ 푸지는 정보주체 권리에 따른 열람의 요구, 정정•삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.\n
+    \n
+    5. 개인정보의 파기\n
+    푸지는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체 없이 해당 개인정보를 파기합니다. 파기절차 및 방법은 다음과 같습니다.\n
+    ① 파기절차\n
+    - 이용자가 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조)일정 기간 저장된 후 파기됩니다.\n
+    - 동 개인정보는 법률에 따른 경우가 아니고서는 보유되는 이외의 다른 목적으로 이용되지 않습니다.\n
+    - 서비스 장기 미이용자의 개인정보보호를 위하여 1년 이상 이용하지 아니하는 이용자의 개인정보는 파기됩니다. 단, 회사는 장기 미이용자의 개인정보가 파기되기 전 30일 전까지 전자우편, 전화 또는 이와 유사한 방법으로 이용자에게 알립니다.\n
+    ② 파기방법\n
+    - 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.\n
+    - 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.\n
+    \n
+    6. 개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항\n
+    푸지는 이용자의 정보를 수시로 저장하고 찾아내는 쿠키(cookie)와 세션(session)을 사용합니다.\n
+    쿠키(cookie) : 서비스 운영에 이용되는 서버가 이용자의 장치에 보내는 아주 작은 텍스트 파일로 이용자 장치의 저장매체에 저장됩니다. \n
+    세션(session) : 서비스 운영에 이용되는 서버가 이용자 접속 시간 동안에 이용자 정보를 서버에 저장하는 것을 의미합니다.\n
+    쿠키와 세션은 이용자가 설정한 환경을 유지하도록 함으로써 편리한 사용을 도우며, 이용자의 방문 기록, 이용 형태, 관심 분야를 알게 해줌으로써 이를 통한 최적화된 맞춤 서비스를 제공하고 서비스 개선의 척도로 활용됩니다.\n
+    이용자는 쿠키 설치에 대한 선택권을 가지고 있으며, 웹 브라우저의 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 모든 쿠키의 저장을 거부할 수 있습니다.\n
+    다만, 쿠키 설치를 거부할 경우 로그인이 필요한 일부 서비스를 이용하는 것에 어려움이 있을 수 있습니다.\n
+    이용자는 세션 설치에 대한 선택권을 가지고 있지 않으며, 로그인이 필요한 서비스 이용 시 서버에 자동으로 세션이 생성됩니다.\n
+    \n
+    7. 개인정보 보호책임자 작성 \n
+    ① 푸지는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n
+    ▶ 개인정보 보호책임자 \n
+    성명 :최원석\n
+    직책 :대표이사\n
+    직급 :대표이사\n
+    연락처 : 010-4965-9733, wonsuk0214@puzi.kr \n
+    ※ 개인정보 보호 담당부서로 연결됩니다.\n
+    ▶ 개인정보 보호 담당부서\n
+    부서명 : 푸지서비스팀\n
+    담당자 : 박장원\n
+    연락처 : 010-2925-5131, jwp928@puzi.kr\n
+    ② 정보주체께서는 푸지의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 푸지는 정보주체의 문의에 대해 지체 없이 답변 및 처리 해드릴 것입니다.\n
+    \n
+    8. 개인정보 처리방침 변경 \n
+    이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.\n
+    \n
+    9. 개인정보의 안전성 확보 조치 \n
+    푸지는 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.\n
+    ① 정기적인 자체 감사 시행\n
+    개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 시행하고 있습니다.\n
+    ② 개인정보 취급 직원의 최소화 및 교육\n
+    개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화하여 개인정보를 관리하는 대책을 시행하고 있습니다.\n
+    ③ 내부관리계획의 수립 및 시행\n
+    개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.\n
+    ④ 해킹 등에 대비한 기술적 대책\n
+    푸지는 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 AWS에서 제공하는 보안기능을 사용하고 있습니다. \n
+    ⑤ 개인정보의 암호화\n
+    이용자의 개인정보는 비밀번호는 암호화되어 저장 및 관리되고 있어, 본인만이 알 수 있도록 조취하고 있습니다.\n
+    ⑥ 접속기록의 보관 및 위변조 방지\n
+    개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.\n
+    ⑦ 개인정보에 대한 접근 제한\n
+    개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n
+    ⑧ 비인가자에 대한 출입 통제\n
+    개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</string>
 </resources>
