--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
   <string name="ask_type">문의 유형을 선택하세요</string>
   <string name="title_activity_company">CompanyActivity</string>
 
+  <string-array name="filter_array">
+    <item>전체</item>
+    <item>내가 쓴 글</item>
+  </string-array>
+
   <string name="confirm_service"><u>서비스 이용약관</u></string>
   <string name="confirm_personal"><u>개인정보 취급 방침</u></string>
 
