--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
   <string name="app_name">Puzi</string>
   <string name="kakao_app_key">1d5e7a9c933cab62987d8cd5359db298</string>
   <string name="kakao_scheme">kakao1d5e7a9c933cab62987d8cd5359db298</string>
+  <string name="facebook_app_id">382660102205121</string>
   <string name="kakaolink_host">kakaolink</string>
   <string name="kakaotalk_host">kakaotalk</string>
 
